--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://moustafaragab1.github.io",
+  "homepage": "https://moustafaragab1.github.io/React_P/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
